form group alignment issue fixed in webhook index page

--- a/app/assets/stylesheets/pages/projects.scss
+++ b/app/assets/stylesheets/pages/projects.scss
@@ -511,3 +511,7 @@ pre.light-well {
     margin-top: -1px;
   }
 }
+
+.form-control-padding-top {
+  padding-top: 10px;
+}
